Fix: overflow hidden

--- a/src/scss/components/team/team.scss
+++ b/src/scss/components/team/team.scss
@@ -1,5 +1,6 @@
 .team {
   margin-bottom: 160px;
+  overflow-x: hidden;
 }
 
 .team-title {
